--- a/src/Base/components/thumbs.scss
+++ b/src/Base/components/thumbs.scss
@@ -2,14 +2,32 @@
   @include row();
   margin-left: -6px;
   margin-right: -6px;
+  &.hot{
+    .thumb{
+      @include col-6();
+      padding: 0 6px;
+      margin-bottom: 12px;
+      &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6){
+        @include col-3();
+        padding: 0 6px;
+        > .media{
+          height: 168px;
+          img{
+            height: 220px;
+          }
+          .qu{
+            > span{
+              font-size: 21px;
+            }
+          }
+        }
+      }
+    }
+  }
   .thumb{
-    @include col-6();
+    @include col-3();
     padding: 0 6px;
     margin-bottom: 12px;
-    &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6){
-      @include col-3();
-      padding: 0 6px;
-    }
     @media screen and (max-width: 960px) {
     	@include col-2();
       padding: 0 6px;
@@ -36,7 +54,7 @@
 
     .qu{
       position: absolute;
-      top: 90px;
+      bottom: 15px;
       left: 18px;
       font-family: $font-family-bold;
       font-size: 11px;
