--- a/stylesheets/apps.css
+++ b/stylesheets/apps.css
@@ -59,6 +59,9 @@ body {
   background: #0f0f0f;
   padding-top: 36px; }
 
+.pointer {
+  cursor: pointer; }
+
 .landing-app {
   font-family: "RobotoCondensed-Regular", TimesNewRoman, "Times New Roman", Times, Georgia, serif;
   background: #0f0f0f;
@@ -676,3 +679,79 @@ body {
       background-repeat: no-repeat;
       background-position: center center;
       background-size: 100%; }
+  .landing-app .modal {
+    position: fixed;
+    z-index: 4;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.43); }
+    .landing-app .modal .close {
+      position: absolute;
+      top: 12px;
+      right: 15px;
+      width: 20px;
+      height: 20px;
+      font-size: 22px;
+      line-height: 1;
+      text-align: right;
+      cursor: pointer; }
+    .landing-app .modal > section {
+      width: 362px;
+      max-width: 100%;
+      margin: 0 auto;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background: #2e2e2d;
+      color: white;
+      border-radius: 1px;
+      transform: translate(-50%, -50%); }
+      .landing-app .modal > section h1, .landing-app .modal > section h2, .landing-app .modal > section h3, .landing-app .modal > section p {
+        text-align: center; }
+      .landing-app .modal > section p {
+        color: #ccc;
+        margin: 0 0; }
+      .landing-app .modal > section hr {
+        border: 0px;
+        border-top: 1px solid #333;
+        border-bottom: 1px solid rgba(204, 204, 204, 0.22);
+        margin-top: 25px;
+        margin-bottom: 25px; }
+      .landing-app .modal > section .timer {
+        font-family: "RobotoCondensed-Italic", TimesNewRoman, "Times New Roman", Times, Georgia, serif;
+        font-size: 35px;
+        color: #e5c232; }
+      .landing-app .modal > section .transform {
+        text-transform: uppercase;
+        font-size: 12px; }
+      .landing-app .modal > section .btn-try {
+        display: inline-block;
+        padding: 6px 24px;
+        font-size: 16px;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        touch-action: manipulation;
+        cursor: pointer;
+        user-select: none;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 1px;
+        background: #296496;
+        display: block;
+        margin: 0 auto;
+        font-size: 15px;
+        border-radius: 1px;
+        background-image: linear-gradient(90deg, #22517a 0%, #2b6699 100%);
+        color: white;
+        margin: 8px auto;
+        border: 0px solid #2e2e2e;
+        padding: 0px 0px;
+        width: 132px;
+        height: 30px;
+        line-height: 1;
+        font-weight: 100;
+        margin-top: 25px; }
