--- a/public/stylesheets/apps.css
+++ b/public/stylesheets/apps.css
@@ -388,6 +388,8 @@ body {
               padding-left: 4px; }
     .landing-app .panel > .panel-body {
       padding: 12px 11px; }
+      .landing-app .panel > .panel-body.auto {
+        padding: 12px 21px; }
     .landing-app .panel .btn-all {
       display: inline-block;
       padding: 6px 24px;
